<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#594691"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/curson"
        android:padding="10dp"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nav_title"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/with"
            android:id="@+id/tv_with"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pst_name"
        android:id="@+id/tv_Pst"
        android:paddingTop="8dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/www"
        android:id="@+id/tv_www"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_below="@id/imageView"
        android:layout_marginTop="25dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="8dp"
        android:text="@string/info"
        android:id="@+id/tv_info"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
